# proctoring-ml-service

./: .env.example  .gitattributes  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
alerts/: __init__.py  types.py
blog/: training-our-ai-proctoring-model.md
docs/: api-reference.md  architecture.md  fine_tuning.md
livekit_client/: __init__.py  frame_receiver.py  publisher.py  room_manager.py
models/: __init__.py  classifier.py  mediapipe.py  yolo.py
pipeline/: __init__.py  alerts.py  features.py  processor.py
proctor/: __init__.py
proctor/api/: __init__.py  server.py
proctor/cfg/: __init__.py  config.py
proctor/data/: __init__.py  audio_receiver.py  dataset.py  publisher.py  video_receiver.py
proctor/data/collectors/: __init__.py  interview_collector.py
proctor/engine/: __init__.py  classifier.py  features.py  fusion.py  model.py  predictor.py  results.py  temporal.py  trainer.py  validator.py
proctor/models/: __init__.py
proctor/models/audio/: __init__.py  audio_models.py  model.py  predictor.py
proctor/models/video/: __init__.py  model.py  predictor.py  trainer.py  validator.py  yolo_trainer.py
proctor/service/: __init__.py  proctoring.py
proctor/training/: __init__.py  clip_trainer.py
proctor/utils/: __init__.py  alerts.py  logger.py
runs/detect/proctoring_h200_20251209_020408/: args.yaml  results.csv
runs/detect/proctoring_h200_20251209_020408/weights/: best.pt  last.pt
runs/detect/proctoring_h200_20251210_060042/: args.yaml  results.csv
runs/detect/proctoring_h200_20251210_060042/weights/: best.pt  last.pt
scripts/: download_and_prepare.py  download_datasets.py  download_models.py  evaluate.py  inference.py  live_detection.py  prepare_dataset.py  train_yolo.py  train_yolo_a100.py  train_yolo_a100_40gb.py  train_yolo_g5.py  train_yolo_h100.py  train_yolo_h200.py
utils/: __init__.py  logger.py  metrics.py
